# NeuralNetworkPathfinding

./: CMakeLists.txt  README.md  create_domain.cpp  dom.h  domain.cpp  layer.cpp  main.cpp  network.cpp  neuron.cpp  nnpf.h  plot_positions.py  seeker.cpp  video_plot.py
